fix(): add more spacing between labels in RangeInput if min/max values are also shown

--- a/src/atoms/rangeInput/rangeInput.module.scss
+++ b/src/atoms/rangeInput/rangeInput.module.scss
@@ -2,19 +2,26 @@
   --awell-range-slider-background-color: var(--awell-accent-ring-color-buttons);
   --ticksHeight: 30%;
   --awell-thick-width: 2px;
-  --awell-ticks: linear-gradient(to right, var(--awell-thick-color) var(--awell-thick-width), transparent 1px) repeat-x;
+  --awell-ticks: linear-gradient(
+      to right,
+      var(--awell-thick-color) var(--awell-thick-width),
+      transparent 1px
+    )
+    repeat-x;
 
   display: flex;
   flex-direction: column;
   background: silver;
   background: var(--awell-ticks);
-  background-size: calc(100%/((var(--awell-max) - var(--awell-min)) / var(--awell-step)) - .1%) var(--ticksHeight);
+  background-size: calc(
+      100% / ((var(--awell-max) - var(--awell-min)) / var(--awell-step)) - 0.1%
+    )
+    var(--ticksHeight);
   background-position: 0 bottom;
   position: relative;
   height: 28px;
   transition: all 0.25s ease-in;
   margin-top: var(--awell-spacing-4);
-
 
   /* min / max labels at the edges */
   &::before,
@@ -36,117 +43,121 @@
     transform: translateX(50%);
   }
 
-
-& .awell_range_input {
-  --awell-radio-awell-border-radius: var(--border-radius-default, 4px);
-  --awell-radio-neutral: var(--neutral, var(--awell-neutralMid400));
-
-  font-size: var(--awell-font-size-md);
-  width: 100%;
-  margin: 1.3px 0;
-  background-color: transparent;
-  appearance: none;
-
-  &:focus {
-    outline: none;
+  & .awell_range_input_datalist {
+    font-size: var(--awell-font-size-md);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
-  &::-webkit-slider-runnable-track {
-    background: var(--awell-range-slider-background-color);
-    border: 0;
-    border-radius: 25px;
+  & .awell_range_input {
+    --awell-radio-awell-border-radius: var(--border-radius-default, 4px);
+    --awell-radio-neutral: var(--neutral, var(--awell-neutralMid400));
+
+    font-size: var(--awell-font-size-md);
     width: 100%;
-    height: 11.4px;
-    cursor: pointer;
-  }
-
-  &::-webkit-slider-thumb {
-    margin-top: -1.3px;
-    width: 14px;
-    height: 14px;
-    background: var(--awell-accent-color);
-    border: 0;
-    border-radius: 15px;
-    cursor: pointer;
+    margin: 1.3px 0;
+    background-color: transparent;
     appearance: none;
-  }
 
-  &::-moz-range-track {
-    background: var(--awell-range-slider-background-color);
-    border: 0;
-    border-radius: 25px;
-    width: 100%;
-    height: 11.4px;
-    cursor: pointer;
-  }
+    &:focus {
+      outline: none;
+    }
 
-  &::-moz-range-thumb {
-    width: 14px;
-    height: 14px;
-    background: var(--awell-accent-color);
-    border: 0;
-    border-radius: 15px;
-    cursor: pointer;
-  }
+    &::-webkit-slider-runnable-track {
+      background: var(--awell-range-slider-background-color);
+      border: 0;
+      border-radius: 25px;
+      width: 100%;
+      height: 11.4px;
+      cursor: pointer;
+    }
 
-  &::-ms-track {
-    background: transparent;
-    border-color: transparent;
-    border-width: 2.2px 0;
-    color: transparent;
-    width: 100%;
-    height: 11.4px;
-    cursor: pointer;
-  }
+    &::-webkit-slider-thumb {
+      margin-top: -1.3px;
+      width: 14px;
+      height: 14px;
+      background: var(--awell-accent-color);
+      border: 0;
+      border-radius: 15px;
+      cursor: pointer;
+      appearance: none;
+    }
 
-  &::-ms-fill-lower {
-    background: var(--awell-accent-color);
-    border: 0;
-    border-radius: 50px;
-  }
+    &::-moz-range-track {
+      background: var(--awell-range-slider-background-color);
+      border: 0;
+      border-radius: 25px;
+      width: 100%;
+      height: 11.4px;
+      cursor: pointer;
+    }
 
-  &::-ms-fill-upper {
-    background: var(--awell-range-slider-background-color); // TODO
-    border: 0;
-    border-radius: 50px;
-  }
+    &::-moz-range-thumb {
+      width: 14px;
+      height: 14px;
+      background: var(--awell-accent-color);
+      border: 0;
+      border-radius: 15px;
+      cursor: pointer;
+    }
 
-  &::-ms-thumb {
-    width: 14px;
-    height: 14px;
-    background: var(--awell-accent-color);
-    border: 0;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-top: 0;
+    &::-ms-track {
+      background: transparent;
+      border-color: transparent;
+      border-width: 2.2px 0;
+      color: transparent;
+      width: 100%;
+      height: 11.4px;
+      cursor: pointer;
+    }
 
-    /* Needed to keep the Edge thumb centred */
-  }
+    &::-ms-fill-lower {
+      background: var(--awell-accent-color);
+      border: 0;
+      border-radius: 50px;
+    }
 
-  &:focus::-ms-fill-lower {
-    background: var(--awell-range-slider-background-color);
-  }
+    &::-ms-fill-upper {
+      background: var(--awell-range-slider-background-color); // TODO
+      border: 0;
+      border-radius: 50px;
+    }
 
-  &:focus::-ms-fill-upper {
-    background: var(--awell-range-slider-background-color); // TODO
-  }
+    &::-ms-thumb {
+      width: 14px;
+      height: 14px;
+      background: var(--awell-accent-color);
+      border: 0;
+      border-radius: 15px;
+      cursor: pointer;
+      margin-top: 0;
 
+      /* Needed to keep the Edge thumb centred */
+    }
 
+    &:focus::-ms-fill-lower {
+      background: var(--awell-range-slider-background-color);
+    }
 
-  /* TODO: Use one of the selectors from https://stackoverflow.com/a/20541859/7077589 and figure out
+    &:focus::-ms-fill-upper {
+      background: var(--awell-range-slider-background-color); // TODO
+    }
+
+    /* TODO: Use one of the selectors from https://stackoverflow.com/a/20541859/7077589 and figure out
   how to remove the virtical space around the range input in IE */
-  @supports (-ms-ime-align:auto) {
-    /* Pre-Chromium Edge only styles, selector taken from hhttps://stackoverflow.com/a/32202953/7077589 */
-    & {
-      margin: 0;
+    @supports (-ms-ime-align: auto) {
+      /* Pre-Chromium Edge only styles, selector taken from hhttps://stackoverflow.com/a/32202953/7077589 */
+      & {
+        margin: 0;
 
-      /* Edge starts the margin from the thumb, not the track as other browsers do */
+        /* Edge starts the margin from the thumb, not the track as other browsers do */
+      }
     }
   }
-}
 
-& .awell_range_input_labels{
-  display: flex;
-  justify-content: space-between;
-}
+  & .awell_range_input_labels {
+    display: flex;
+    justify-content: space-between;
+  }
 }
